--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-pretty-logger": "^1.0.2"
   }
 }
